# Shallow_water_FV

./: CMake.config  CMake.config_Linux_gfortran  CMakeLists.txt  README.md
Examples/Dam break/: Build_initial_condition.f90  dam_ref.geo  dam_ref.msh  dam_ref_init.msh  parameters_dam
Examples/Oblique hydraulic jump/: Build_initial_condition.f90  oblique_jump_geom.geo  oblique_jump_uni.msh  oblique_jump_uni_init.msh  oblique_jump_uni_sol.msh  parameters_oblique_shock
Examples/Straight channel with slope and friction/: Build_initial_condition.f90  channel_slope.geo  channel_slope.msh  channel_slope_init.msh  channel_slope_sol.msh  parameters_channel_slope  theory_channel.m
Examples/Supercritical flow in symmetrical contraction/: Build_initial_condition.f90  channel_contraction_Lai.geo  channel_contraction_Lai_nonuni.msh  channel_contraction_Lai_nonuni_MUSCL_sol.msh  channel_contraction_Lai_sol.pos  channel_contraction_Lai_uni.msh  parameters_channel_contraction  theory_channel_varying_width_supercritical.m
Examples/Transcritical flow in long channels/: Build_initial_condition.f90  channel_contraction_Cueto_gradient_Ld125.pos  channel_contraction_Cueto_gradient_Ld250.pos  channel_contraction_Cueto_gradient_Ld4000.pos  channel_contraction_Cueto_gradient_Ld500.pos  channel_contraction_Cueto_gradient_Ld75.pos  iterative_solver.m  parameters_transc_long_channel  theory_channel_varying_width_long_channel.m  transcritical_long_channel_Ld125.geo  transcritical_long_channel_Ld250.geo  transcritical_long_channel_Ld4000.geo  transcritical_long_channel_Ld500.geo  transcritical_long_channel_Ld500.msh  transcritical_long_channel_Ld75.geo
SRC/: Build_initial_condition.f90  Build_initial_condition_old.f90  Get_relative_error_theory.f90  Main.f90  Mesh_interpolator.f90  adaptive_mesh_refinement.f90  booklib.f90  deltaT.f90  f2aquaterm.m  find_elem.f90  flux.f90  get_normal_to_cell.f90  gmsh_operations.f90  gnufor.f90  handling_parameters.f90  mem_allocate.f90  module_shallow.f90  runge_kutta.f90
